# pricely

./: .gitignore  Makefile  README.md  docker-compose.yml
.claude/agents/: check.md  debug.md  dispatch.md  implement.md  plan.md  research.md
.trellis/scripts/: update_tasks.py
.trellis/workspace/: index.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_compliance.py  002_pattern_enum.py  63ca0d9086cb_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  auth.py  compliance.py  data.py  log.py  market.py  pattern.py  trade.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  ai.py  compliance.py  enums.py  init_db.py  log.py  market.py  pattern.py  trade.py  user.py
backend/app/schemas/: __init__.py  ai.py  common.py  compliance.py  log.py  market.py  pattern.py  trade.py  user.py  websocket.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  compliance_service.py  data_load_service.py  log_service.py  market_service.py  order_matcher.py  report_service.py  scheduler_service.py  trade_service.py  websocket_manager.py
backend/app/utils/: __init__.py  data_loader.py  sr_algorithm.py
backend/data/klines/: sample_klines.csv
backend/data/stocks/: stocks.json
docs/: pricely-mvp-design.md  pricely_prd_simple.md
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
(+222 files in other folders)
